test/integration/bad/data_index/non_data_index14.stan
parameters {
  array[3] real y;

}
transformed parameters {
  cov_matrix[size(y)] z;
}
